--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
+        "php": "^8.1",
         "laravel/framework": "^11.0"
     },
     "suggest": {
